# jota-rss-feed

./: .coverage  README.md  pyproject.toml  tags.txt
.github/workflows/: update_feed.yml
public/: feed.xml  itcmd.xml  reforma-tributaria.xml  stf.xml
src/: main.py
tests/: test_main.py
